--- a/app/styles/app/pages/landing.scss
+++ b/app/styles/app/pages/landing.scss
@@ -1,5 +1,5 @@
 .top.landing-page .topbar,
-.wrapper.centered .topbar {
+.wrapper.centered .topbar, .global-notification-container {
   margin: 0 auto;
   max-width: 1024px;
 }
